--- a/src/app/modules/define-pages/menu-config/menu-config.component.html
+++ b/src/app/modules/define-pages/menu-config/menu-config.component.html
@@ -45,7 +45,7 @@
                 <div class="child">
 
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("PageTitle",element,$event)' [(ngModel)]="element.PageTitle" [(value)]="element.PageTitle" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("PageTitle",element,$event)' [(ngModel)]="element.PageTitle" [value]="element.PageTitle" autocomplete="Off">
                     </mat-form-field>
 <!-- 
                     <album-edit-input [data]="element.PageTitle" (tried)="getoldvalue($event)" (focusOut)='updateActive("PageTitle",element,$event)'>
@@ -53,7 +53,7 @@
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("ParentPage",element,$event)' [(ngModel)]="element.ParentPage" [(value)]="element.ParentPage" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("ParentPage",element,$event)' [(ngModel)]="element.ParentPage" [value]="element.ParentPage" autocomplete="Off">
                     </mat-form-field>
 
                     <!-- <album-edit-input [data]="element.ParentPage" (tried)="getoldvalue($event)" (focusOut)='updateActive("ParentPage",element,$event)'>
@@ -61,7 +61,7 @@
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("faIcon",element,$event)' [(ngModel)]="element.faIcon" [(value)]="element.faIcon" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("faIcon",element,$event)' [(ngModel)]="element.faIcon" [value]="element.faIcon" autocomplete="Off">
                     </mat-form-field>
 
                     <!-- <album-edit-input [data]="element.faIcon" (tried)="getoldvalue($event)" (focusOut)='updateActive("faIcon",element,$event)'>
@@ -69,7 +69,7 @@
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("link",element,$event)' [(ngModel)]="element.link" [(value)]="element.link" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("link",element,$event)' [(ngModel)]="element.link" [value]="element.link" autocomplete="Off">
                     </mat-form-field>
 
                     <!-- <album-edit-input [data]="element.link" (tried)="getoldvalue($event)" (focusOut)='updateActive("link",element,$event)'>
@@ -77,41 +77,41 @@
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("label",element,$event)' [(ngModel)]="element.label" [(value)]="element.label" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("label",element,$event)' [(ngModel)]="element.label" [value]="element.label" autocomplete="Off">
                     </mat-form-field>
                     <!-- <album-edit-input [data]="element.label" (tried)="getoldvalue($event)" (focusOut)='updateActive("label",element,$event)'>
                     </album-edit-input> -->
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("DisplayOrder",element,$event)' [(ngModel)]="element.DisplayOrder" [(value)]="element.DisplayOrder" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("DisplayOrder",element,$event)' [(ngModel)]="element.DisplayOrder" [value]="element.DisplayOrder" autocomplete="Off">
                     </mat-form-field>
                     
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("HasSubmenu",element,$event)' [(ngModel)]="element.HasSubmenu" [(value)]="element.HasSubmenu" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("HasSubmenu",element,$event)' [(ngModel)]="element.HasSubmenu" [value]="element.HasSubmenu" autocomplete="Off">
                     </mat-form-field>
                     <!-- <album-edit-input [data]="element.HasSubmenu" (tried)="getoldvalue($event)" (focusOut)='updateActive("HasSubmenu",element,$event)'>
                     </album-edit-input> -->
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("IsTemplate",element,$event)' [(ngModel)]="element.IsTemplate" [(value)]="element.IsTemplate" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("IsTemplate",element,$event)' [(ngModel)]="element.IsTemplate" [value]="element.IsTemplate" autocomplete="Off">
                     </mat-form-field>
                     <!-- <album-edit-input [data]="element.IsTemplate" (tried)="getoldvalue($event)" (focusOut)='updateActive("IsTemplate",element,$event)'>
                     </album-edit-input> -->
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("HomePage",element,$event)' [(ngModel)]="element.HomePage" [(value)]="element.HomePage" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("HomePage",element,$event)' [(ngModel)]="element.HomePage" [value]="element.HomePage" autocomplete="Off">
                     </mat-form-field>
                     <!-- <album-edit-input [data]="element.HomePage" (tried)="getoldvalue($event)" (focusOut)='updateActive("HomePage",element,$event)'>
                     </album-edit-input> -->
                 </div>
                 <div class="child">
                     <mat-form-field>
-                        <input matInput (focusOut)='updateActive("Active",element,$event)' [(ngModel)]="element.Active" [(value)]="element.Active" autocomplete="Off">
+                        <input matInput (focusOut)='updateActive("Active",element,$event)' [(ngModel)]="element.Active" [value]="element.Active" autocomplete="Off">
                     </mat-form-field>
                     <!-- <album-edit-input [data]="element.Active" (tried)="getoldvalue($event)" (focusOut)='updateActive("Active",element,$event)'>
                     </album-edit-input> -->
