--- a/src/app/modules/Accounting/accounting-voucher/accounting-voucher.component.html
+++ b/src/app/modules/Accounting/accounting-voucher/accounting-voucher.component.html
@@ -42,7 +42,7 @@
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field appearance="outline" [style.width.px]="130">
                         <mat-label>Doc Date</mat-label>
-                        <input [(ngModel)]="element.DocDate" [(value)]="element.DocDate" matInput
+                        <input [(ngModel)]="element.DocDate" [value]="element.DocDate" matInput
                             [matDatepicker]="DocDate" autocomplete="off">
                         <mat-datepicker-toggle matSuffix [for]="DocDate"></mat-datepicker-toggle>
                         <mat-datepicker #DocDate></mat-datepicker>
@@ -55,7 +55,7 @@
                 <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                     <mat-form-field appearance="outline" [style.width.px]="130">
                         <mat-label>Posting Date</mat-label>
-                        <input [(ngModel)]="element.PostingDate" [(value)]="element.PostingDate" matInput
+                        <input [(ngModel)]="element.PostingDate" [value]="element.PostingDate" matInput
                             [matDatepicker]="PostingDate" autocomplete="off">
                         <mat-datepicker-toggle matSuffix [for]="PostingDate"></mat-datepicker-toggle>
                         <mat-datepicker #PostingDate></mat-datepicker>
@@ -68,7 +68,7 @@
                     <mat-form-field  [style.width.px]="130">
                         <mat-label>Reference</mat-label>
                         <input matInput autocomplete="Off" [(ngModel)]="element.Reference"
-                            [(value)]="element.Reference">
+                            [value]="element.Reference">
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
@@ -76,7 +76,7 @@
                 <mat-header-cell *matHeaderCellDef> GL Accounts </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="130">
-                        <mat-select [(ngModel)]="element.GLAccountId" [(value)]="element.GLAccountId">
+                        <mat-select [(ngModel)]="element.GLAccountId" [value]="element.GLAccountId">
                             <mat-option [value]="0">GL Accounts</mat-option>
                             <mat-option *ngFor="let item of GLAccounts" [value]="item.GLAccountId">{{item.GLAccount}}
                             </mat-option>
@@ -96,7 +96,7 @@
                 <mat-header-cell *matHeaderCellDef> Amount </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="130">
-                        <input matInput autocomplete="Off" [(ngModel)]="element.Amount" [(value)]="element.Amount">                            
+                        <input matInput autocomplete="Off" [(ngModel)]="element.Amount" [value]="element.Amount">                            
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
@@ -104,7 +104,7 @@
                 <mat-header-cell *matHeaderCellDef> Short Text </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="160">
-                        <input matInput autocomplete="Off" [(ngModel)]="element.ShortText" [(value)]="element.ShortText">                            
+                        <input matInput autocomplete="Off" [(ngModel)]="element.ShortText" [value]="element.ShortText">                            
                     </mat-form-field>
                 </mat-cell>
             </ng-container>
