--- a/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
+++ b/src/app/modules/ClassSubject/AssignStudentClass/Assignstudentclassdashboard.component.html
@@ -68,7 +68,7 @@
             </mat-header-cell>
             <mat-cell style="display: flex;justify-content: center;" *matCellDef="let element">
                 <mat-form-field [style.width.px]="50">
-                    <mat-select (selectionChange)="onBlur(element)" [(value)]="element.SectionId"
+                    <mat-select (selectionChange)="onBlur(element)" [value]="element.SectionId"
                         [(ngModel)]="element.SectionId">
                         <!-- <mat-option value="0">--section--</mat-option> -->
                         <mat-option *ngFor="let item of Sections" [value]="item.MasterDataId">{{item.MasterDataName}}
@@ -81,7 +81,7 @@
             <mat-header-cell *matHeaderCellDef mat-sort-header> Fee Type </mat-header-cell>
             <mat-cell *matCellDef="let element">
                 <mat-form-field [style.width.px]="250">
-                    <mat-select (selectionChange)="onBlur(element)" [(value)]="element.FeeTypeId"
+                    <mat-select (selectionChange)="onBlur(element)" [value]="element.FeeTypeId"
                         [(ngModel)]="element.FeeTypeId">
                         <mat-option *ngFor="let item of FeeTypes" [value]="item.FeeTypeId">{{item.FeeTypeName}}
                         </mat-option>
