--- a/src/app/modules/ClassSubject/classfee/dashboardclassfee/dashboardclassfee.component.html
+++ b/src/app/modules/ClassSubject/classfee/dashboardclassfee/dashboardclassfee.component.html
@@ -79,7 +79,7 @@
                 <mat-header-cell *matHeaderCellDef>Month</mat-header-cell>
                 <mat-cell style="justify-content: center;" *matCellDef="let element">
                     <mat-form-field [style.width.px]="80">
-                      <mat-select [(ngModel)]="element.Month" [(value)]="element.Month" (selectionChange)="onBlur(element)">
+                      <mat-select [(ngModel)]="element.Month" [value]="element.Month" (selectionChange)="onBlur(element)">
                           <mat-option *ngFor="let item of Months" [value]="item.val">{{item.month}}</mat-option>
                       </mat-select>                      
                     </mat-form-field>
