--- a/src/app/modules/ClassSubject/classsubjectteacher/classsubjectteacher.component.html
+++ b/src/app/modules/ClassSubject/classsubjectteacher/classsubjectteacher.component.html
@@ -56,7 +56,7 @@
                 <mat-cell *matCellDef="let element">
                     <mat-form-field>
                         <mat-label>Class</mat-label>
-                        <mat-select (selectionChange)="onBlur(element)" [(value)]="element.ClassSubjectId"
+                        <mat-select (selectionChange)="onBlur(element)" [value]="element.ClassSubjectId"
                             [(ngModel)]="element.ClassSubjectId">
                             <mat-option *ngFor="let item of ClassSubjects" [value]="item.ClassSubjectId">
                                 {{item.ClassSubject}}</mat-option>
