--- a/src/app/modules/EmployeeManagement/emp-components/emp-components.component.html
+++ b/src/app/modules/EmployeeManagement/emp-components/emp-components.component.html
@@ -26,7 +26,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.px]="350" appearance="outline">
-                            <input (blur)="onBlur(element,$event)" matInput autocomplete="Off" [(value)]="element.SalaryComponent"
+                            <input (blur)="onBlur(element,$event)" matInput autocomplete="Off" [value]="element.SalaryComponent"
                                 [(ngModel)]="element.SalaryComponent">
                         </mat-form-field>
                     </mat-cell>
@@ -36,7 +36,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.px]="350" appearance="outline">
-                            <textarea matInput [(value)]="element.FormulaOrAmount" (blur)="onBlur(element,$event)"
+                            <textarea matInput [value]="element.FormulaOrAmount" (blur)="onBlur(element,$event)"
                                 [(ngModel)]="element.FormulaOrAmount"></textarea>
                         </mat-form-field>
                     </mat-cell>
@@ -47,7 +47,7 @@
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field appearance="outline">
                             <mat-label>Component type</mat-label>
-                            <mat-select (selectionChange)="onBlur(element,$event)" [(value)]="element.ComponentTypeId" [(ngModel)]="element.ComponentTypeId">
+                            <mat-select (selectionChange)="onBlur(element,$event)" [value]="element.ComponentTypeId" [(ngModel)]="element.ComponentTypeId">
                                 <mat-option *ngFor="let item of ComponentTypes" [value]="item.MasterDataId">
                                     {{item.MasterDataName}}
                                 </mat-option>
