--- a/src/app/modules/LeaveManagement/emp-leave/emp-leave.component.html
+++ b/src/app/modules/LeaveManagement/emp-leave/emp-leave.component.html
@@ -33,7 +33,7 @@
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
                         <mat-form-field [style.width.px]="100" appearance="outline">
-                            <input type="number" matInput autocomplete="Off" [(value)]="element.NoOfDays"
+                            <input type="number" matInput autocomplete="Off" [value]="element.NoOfDays"
                                 [(ngModel)]="element.NoOfDays">
                         </mat-form-field>
                     </mat-cell>
