--- a/src/app/modules/attendance/studentattendance/studentattendance.component.html
+++ b/src/app/modules/attendance/studentattendance/studentattendance.component.html
@@ -60,7 +60,7 @@
                 <mat-header-cell *matHeaderCellDef> Remarks </mat-header-cell>
                 <mat-cell *matCellDef="let element">
                     <mat-form-field [style.width.px]="150">
-                        <input matInput [maxlength]="250" autocomplete="Off" (change)="onChangeEvent(element,$event)" [(value)]="element.Remarks"
+                        <input matInput [maxlength]="250" autocomplete="Off" (change)="onChangeEvent(element,$event)" [value]="element.Remarks"
                             [(ngModel)]="element.Remarks">
                     </mat-form-field>
                 </mat-cell>
