--- a/src/app/modules/photogallery/albums/albums.component.html
+++ b/src/app/modules/photogallery/albums/albums.component.html
@@ -32,7 +32,7 @@
                     <mat-header-cell *matHeaderCellDef> Folder/File </mat-header-cell>
                     <mat-cell mat-cell *matCellDef="let element">
                         <mat-form-field>
-                            <input matInput (focusOut)='updateAlbum($event)' [(ngModel)]="element.UpdatedFileFolderName" [(value)]="element.UpdatedFileFolderName" autocomplete="Off">
+                            <input matInput (focusOut)='updateAlbum($event)' [(ngModel)]="element.UpdatedFileFolderName" [value]="element.UpdatedFileFolderName" autocomplete="Off">
                         </mat-form-field>
                         
                     </mat-cell>
