--- a/src/app/modules/studentexam/studentactivity/studentactivity.component.html
+++ b/src/app/modules/studentexam/studentactivity/studentactivity.component.html
@@ -35,7 +35,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                            <mat-form-field>
-                               <textarea matInput [(value)]="element.Activity"  [(ngModel)]="element.Activity"></textarea>
+                               <textarea matInput [value]="element.Activity"  [(ngModel)]="element.Activity"></textarea>
                            </mat-form-field>
                     </mat-cell>
                 </ng-container>
@@ -44,7 +44,7 @@
                     </mat-header-cell>
                     <mat-cell style="display: flex;" *matCellDef="let element">
                            <mat-form-field [style.width.px]="120">
-                            <input [(value)]="element.ActivityDate" [(ngModel)]="element.ActivityDate" matInput [matDatepicker]="ActivityDate" autocomplete="off">
+                            <input [value]="element.ActivityDate" [(ngModel)]="element.ActivityDate" matInput [matDatepicker]="ActivityDate" autocomplete="off">
                             <mat-datepicker-toggle matSuffix [for]="ActivityDate"></mat-datepicker-toggle>
                             <mat-datepicker #ActivityDate></mat-datepicker>
                         </mat-form-field>
