--- a/src/app/modules/LeaveManagement/LeaveBalance/leavebalance.component.html
+++ b/src/app/modules/LeaveManagement/LeaveBalance/leavebalance.component.html
@@ -1,21 +1,22 @@
 <div>
     <div style="padding:15px 15px 0px 15px;">
-        <div><strong>Grade Leaves</strong></div>
+        <div><strong>Leaves</strong></div>
     </div>
     <mat-spinner *ngIf="loading" diameter="25" style="position:relative;margin-left: 50%;"></mat-spinner>
     <alert></alert>
     <div style="padding: 15px;" fxLayout="row wrap">
         <div style="width: 100%;">
             <form [formGroup]="searchForm">
-                <mat-form-field appearance="outline">
-                    <mat-label>Grade</mat-label>
-                    <mat-select formControlName="searchLeaveId">
-                        <mat-option *ngFor="let item of Leaves" [value]="item.MasterDataId">
-                            {{item.MasterDataName}}
+                <mat-form-field [style.width.pc]="25" appearance="outline">
+                    <mat-label>Employee</mat-label>
+                    <input type="text" matInput formControlName="searchEmployee" [matAutocomplete]="auto">
+                    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+                        <mat-option *ngFor="let option of filteredOptions | async" [value]="option">
+                            {{option.Name}}
                         </mat-option>
-                    </mat-select>
+                    </mat-autocomplete>
                 </mat-form-field>
-                <button [disabled]="loading" class="mat-raised-button" (click)="GetEmpLeave()">
+                <button [disabled]="loading" class="mat-raised-button" (click)="GetLeaveBalance()">
                     <mat-icon>search</mat-icon>
                 </button>
             </form>
@@ -28,7 +29,17 @@
                         {{element.Leave}}
                     </mat-cell>
                 </ng-container>
-                <ng-container matColumnDef="NoOfDays">
+                <ng-container matColumnDef="FormulaOrDays">
+                    <mat-header-cell *matHeaderCellDef>Formula Or Days
+                    </mat-header-cell>
+                    <mat-cell *matCellDef="let element ">
+                        <mat-form-field [style.width.px]="100" appearance="outline">
+                            <textarea type="number" matInput autocomplete="Off" [value]="element.FormulaOrDays"
+                                [(ngModel)]="element.FormulaOrDays" [maxLength]="256"></textarea>
+                        </mat-form-field>
+                    </mat-cell>
+                </ng-container>
+                <!-- <ng-container matColumnDef="NoOfDays">
                     <mat-header-cell *matHeaderCellDef>No. Of Days
                     </mat-header-cell>
                     <mat-cell *matCellDef="let element ">
@@ -37,7 +48,7 @@
                                 [(ngModel)]="element.NoOfDays">
                         </mat-form-field>
                     </mat-cell>
-                </ng-container>
+                </ng-container> -->
                 <ng-container matColumnDef="Active">
                     <mat-header-cell *matHeaderCellDef> Active </mat-header-cell>
                     <mat-cell *matCellDef="let element">
