leave management in progress

--- a/src/app/modules/LeaveManagement/leaveboard/leaveboard.component.html
+++ b/src/app/modules/LeaveManagement/leaveboard/leaveboard.component.html
@@ -10,7 +10,7 @@
                     <ng-template mat-tab-label>
                         <mat-icon>info</mat-icon>Leave
                     </ng-template>
-                    <app-emp-leave></app-emp-leave>
+                    <app-leavebalance></app-leavebalance>
                 </mat-tab>
                 <mat-tab>
                     <ng-template mat-tab-label>
